<resources>
    <string name="app_name">SafeNote</string>
    <string name="login">LOGIN</string>
    <string name="orlogin">OR LOGIN</string>
    <string name="register">Register</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="save">save</string>
    <string name="password">Password</string>
    <string name="passwordagain">Password Again</string>
    <string name="username">Username</string>
    <string name="title_activity_register">register</string>
    <string name="orregister">OR REGISTER</string>
    <string name="title_activity_not_duzenle">"Edit Note "</string>
    <string name="unsave">Discard</string>
    <string name="add">Add</string>
    <string name="ip">http://someipadressofserver</string>
    <string name="fakepassword">Fake Password</string>
    <string name="fakedesc">If you type fake password in login screen, then all of your data will be removed.</string>
    <string name="key">***somekey***</string>
</resources>
